+ reading in the test .gb file from https://bgb.bircd.org/ * fixed unsigned16 compositing * split cpu functionality into more files

--- a/cboy.vcxproj.filters
+++ b/cboy.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="gb_cpu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="gb_cpu_instructions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
