--- a/cboy.vcxproj
+++ b/cboy.vcxproj
@@ -168,6 +168,7 @@
   <ItemGroup>
     <ClInclude Include="gb_cpu.h" />
     <ClInclude Include="gb_memory.h" />
+    <ClInclude Include="gb_cpu_instructions.h" />
     <ClInclude Include="sdl_utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
